@@ -11,7 +11,7 @@ License:   GPL
 Url:       http://pcmanx.csie.net
 Source:    http://pcmanx.csie.net/release/%{name}-%{version}.tar.gz
 Vendor:    PCMan X GTK+ 2 project
-Packager:  Shih-yuan Lee (FourDollars) <fourdollars@gmail.com>
+Packager:  PCMan X <PCManX@googlegroups.com>
 
 BuildRoot:        %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 BuildRequires:    gettext, pkgconfig, gtk2-devel >= 2.4.0, desktop-file-utils
